# innowise_laboratory

./: .gitignore
lecture_1/: pyproject.toml
lecture_2/: functions.py  generate_profile.py  main.py
lecture_3/: functions.py  main.py
lecture_4/: main.py  queries.sql
lecture_5/book_api/: app.py
lecture_5/book_api/database/: creating_db.py  database.db  models.py  schemes.py
